rss-puzzle/src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  color: #ececec;
  background-color: #4b7246;
  background-image: url("../public/img/first_screen.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  font-family: Arial, Helvetica, sans-serif;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

form {
  width: 250px;
  padding: 20px;
  border-radius: 10px;
  background-color: rgba(0, 0, 0, 0.5);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
  display: flex;
  flex-direction: column;
}

.input {
  margin-bottom: 5px;
  padding: 10px;
  border: 1px solid #ececec;
  border-radius: 7px;
  opacity: 0.8;
}

.input.invalid {
  border: 1px solid #ff0000;
}

.error-message {
  font-size: 11px;
  color: #ff8e8e;
  margin-bottom: 10px;
  opacity: 0.7;
  height: 0px;
  overflow: hidden;
  transition: height 0.2s ease-in-out;
}

.input.invalid + .error-message {
  height: 27px;
}

button {
  padding: 10px;
  width: 100%;
  border: none;
  border-radius: 7px;
  background-color: #4caf50;
  color: #ffffff;
  cursor: pointer;
  transition: background-color 0.5s ease-in-out;
  opacity: 0.8;
}

.continue-button,
.auto-complete-button {
  font-size: 16px;
  width: 200px;
  align-self: center;
  opacity: 1;
}

.check-button {
  background-color: #767ff7;
  font-size: 16px;
  width: 200px;
  align-self: center;
  opacity: 1;
}

.check-button:hover {
  background-color: #4751df;
}

.continue-button {
  display: block;
}

button.disabled,
.check-button.disabled {
  background-color: #c0f0c2;
  color: #adadad;
  cursor: not-allowed;
  pointer-events: none;
}

.check-button.disabled {
  background-color: #cacdff;
  color: #adadad;
  cursor: not-allowed;
  pointer-events: none;
}

.not-available {
  display: none;
}

.button-container {
  display: flex;
  gap: 10px;
}

.start-screen-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.greet-text {
  height: 30px;
  background: linear-gradient(
    to right,
    rgba(128, 255, 132, 0.1),
    rgba(0, 196, 7, 0.7)
  );
  color: #80ff84;
  padding: 5px;
  border-radius: 5px;
  position: relative;
  animation-name: appear;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  opacity: 1;

  display: flex;
  align-items: center;
}

.title {
  text-transform: uppercase;
  font-weight: 600;
  color: #80ff84;
}

.start-text {
  color: #c0f0c2;
}

.start-button {
  font-size: 16px;
  margin-top: 15px;
}

.log-out-button {
  position: absolute;
  width: 100px;
  right: 0;
  top: 0;
  margin-top: 10px;
  margin-right: 10px;
}

.image-puzzle {
  opacity: 0.8;
}

.game-area {
  width: 728px;
  display: flex;
  align-items: center;
  flex-direction: column;
  height: calc(100% - 50px);
  gap: 20px;
}

.result-area {
  width: 100%;
  height: 415px;
  border: 3px solid #00f600;
  border-radius: 10px;
  background-color: rgb(186, 186, 186, 0.8);
  display: flex;
  flex-direction: column;
  gap: 1px;
}

.source-area {
  width: 100%;
  display: flex;
  height: 40px;
  border: 3px solid #00f600;
  border-radius: 10px;
  background-color: rgb(186, 186, 186, 0.8);
}

.result-sentence {
  display: flex;
  height: 40px;
  border: 1px solid #000000;
  border-radius: 10px;
}

.result-sentence_done {
  pointer-events: none;
}

.puzzle-item {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #000000;
  border: 1px solid #000000;
  border-radius: 10px;
  background-color: #ceffd0;
  cursor: pointer;
  transition: all 0.2s ease;
  animation-name: appear;
  animation-duration: 0.3s;
  animation-timing-function: ease-out;
  font-family: "Roboto Mono", monospace;
}

.puzzle-item .puzzle-items__result {
  height: 37px;
}

.puzzle-item .puzzle-items__source {
  height: 36px;
}

.puzzle-item_disappear {
  animation-name: disappear;
}

.correct {
  background-color: #26d12e;
}

.mistake {
  background-color: #e88888;
}

.hint-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70px;
  width: 50%;
  padding: 5px;
}

.hint-translation-sentence {
  color: #80ff84;
  padding: 5px;
  border-radius: 5px;
  background: linear-gradient(
    to right,
    rgba(128, 255, 132, 0.1),
    rgba(0, 196, 7, 0.7)
  );
  font-size: 18px;
}

.hint-translation-sentence_hidden {
  visibility: hidden;
}

.hint-translation-sentence_showed {
  visibility: visible;
}

.image-translation {
  opacity: 0.8;
  cursor: pointer;
  transition: opacity 0.3s ease-in-out;
}

.image-translation-chosen {
  border: 1px solid #00ff08;
  border-radius: 5px;
  opacity: 1;
}

@keyframes appear {
  0% {
    opacity: 0;
    transform: scale(0.5);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes disappear {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  100% {
    opacity: 0;
    transform: scale(0.5);
  }
}

@media (hover: hover) {
  button:hover {
    background-color: #009808;
  }

  .puzzle-item:hover {
    border: 1px solid #ff0000;
  }

  .image-translation:hover {
    opacity: 1;
  }
}

